config/velociraptor.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: velociraptor-web-app
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: velociraptor-web-app
    spec:
      containers:
      - name: web-app
        image: 'cjblink1/velociraptor-web-app:follow-evader-80ad2b10494aa27649ff425a09a4836cc8fd9850'
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: velociraptor-web-app
  labels:
    name: velociraptor-web-app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: velociraptor-web-app
  type: ClusterIP
